repair register form

--- a/app/views/authentication/register.rhtml
+++ b/app/views/authentication/register.rhtml
@@ -123,9 +123,8 @@
       
         <tr>
           <td><%= link_to space_to_nbsp("Zaloguj się."), { :action=>"login"} %></td>
-          <td >* - pola wymagane &nbsp; <%= submit_tag("Zarejestruj.")%></td>
-          <td id="last"></td>
-          
+          <td >* - pola wymagane</td>
+	  <td>  <%= submit_tag("Zarejestruj.")%></td>
         </tr>
       </table>
     <%end%>
