added grapha, statistics for places and categories

--- a/app/views/layouts/main.rhtml
+++ b/app/views/layouts/main.rhtml
@@ -44,6 +44,10 @@
             <%#= link_to image_tag('/images/button.png'), {:controller=>'view', :action=>'places'}%>
             <%= link_to_remote( image_tag('/images/button.png'), :url=> {:controller=>'view', :action=>'places'})%>
           </div>
+          <div id="button_left">
+            <%#= link_to image_tag('/images/button.png'), {:controller=>'view', :action=>'places'}%>
+            <%= link_to_remote( 'GRAPH', :url=> {:controller=>'view', :action=>'graphs'})%>
+          </div>
         </div>        
         <div id="menu_right">
           <div id="button_o_mnie">
