--- a/public/stylesheets/pomarancz.css
+++ b/public/stylesheets/pomarancz.css
@@ -367,6 +367,8 @@ td {
 
 td#right {
     text-align: right;
+    margin:0;
+    padding:0;
 }
 td#login_flash{
     text-align: right;
@@ -541,28 +543,34 @@ div#message {
 }
 #statistics{
     
-  text-align: center;
+    text-align: center;
 }
 #statistics_table{
-     text-align: center;
-     margin: 0 auto;
-     width:300px;
-     float:left;
+    text-align: center;
+    margin: 0 auto;
+    width:300px;
+    float:left;
 }
 table#place_graph{
     
-  padding:0;
-  margin:20;
-  border-collapse:collapse;
+    padding: 0;
+    margin: 20px;
+    border-collapse: collapse;
 }
 table#place_graph td{
-  padding:0 5px;
-  margin:0;
-  
-  border-style: solid;
-  border-width: 1px;
-  border-color:black;
+    padding:0 5px;
+    margin:0;
+    
+    border-style: solid;
+    border-width: 1px;
+    border-color:black;
 }
 #graph{
     float:left;
+}
+#bill_graph_form{
+    width:100%;
+}
+#bill_graph_data{
+    width:100%;
 }
