--- a/app/views/view/_graphs_submenu.html.erb
+++ b/app/views/view/_graphs_submenu.html.erb
@@ -1,14 +1,14 @@
 <div id="menu_left">
   <div id="button_left">
     <%#= link_to image_tag('/images/button.png'), {:controller=>'view', :action=>'places'}%>
-    <%= link_to_remote( 'places', :url=> {:controller=>'view', :action=>'place_graph'})%>
+    <%= link_to_remote( 'places', :url=> {:controller=>'view', :action=>'place_graph'}, :loading=>"Element.show('load-indicator')", :loaded=>"Element.hide('load-indicator')")%>
   </div>
   <div id="button_left">
     <%#= link_to image_tag('/images/button.png'), {:controller=>'view', :action=>'places'}%>
-    <%= link_to_remote( 'categories', :url=> {:controller=>'view', :action=>'category_graph'})%>
+    <%= link_to_remote( 'categories', :url=> {:controller=>'view', :action=>'category_graph'}, :loading=>"Element.show('load-indicator')", :loaded=>"Element.hide('load-indicator')")%>
   </div>
   <div id="button_left">
     <%#= link_to image_tag('/images/button.png'), {:controller=>'view', :action=>'places'}%>
-    <%= link_to_remote( 'bills', :url=> {:controller=>'view', :action=>'bill_graph'})%>
+    <%= link_to_remote( 'bills', :url=> {:controller=>'view', :action=>'bill_graph'}, :loading=>"Element.show('load-indicator')", :loaded=>"Element.hide('load-indicator')")%>
   </div>
 </div>
