--- a/public/stylesheets/pomarancz.css
+++ b/public/stylesheets/pomarancz.css
@@ -174,6 +174,21 @@ div#button_miejsca:hover {
     background-repeat: no-repeat;
     text-decoration: none;
 }
+div#button_statystyki {
+    float: left;
+    height: 100%;
+    width: 110px;
+    margin-top: 0px;
+    cursor: pointer;
+    background-image: url(/images/button_statystyki_wcisniety.png);
+    background-repeat: no-repeat;
+}
+
+div#button_statystyki:hover {
+    background-image: url(/images/button_statystyki.png);
+    background-repeat: no-repeat;
+    text-decoration: none;
+}
 
 div#button_o_mnie {
     float: left;
